crates/interpreter/src/snapshots/interpreter__parser__tests__snapshot_union_type_mix.snap
---
source: crates/interpreter/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Null,
            span: Span {
                file: FileId(
                    0,
                ),
                start: 35,
                end: 39,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Let {
                name: Ident {
                    name: "xs",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 4,
                        end: 6,
                    },
                },
                ty: Some(
                    TypeAnnotation {
                        kind: Union(
                            [
                                TypeAnnotation {
                                    kind: Array(
                                        TypeAnnotation {
                                            kind: Name {
                                                name: Ident {
                                                    name: "number",
                                                    span: Span {
                                                        file: FileId(
                                                            0,
                                                        ),
                                                        start: 8,
                                                        end: 14,
                                                    },
                                                },
                                                args: [],
                                            },
                                            span: Span {
                                                file: FileId(
                                                    0,
                                                ),
                                                start: 8,
                                                end: 14,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 8,
                                        end: 16,
                                    },
                                },
                                TypeAnnotation {
                                    kind: Name {
                                        name: Ident {
                                            name: "string",
                                            span: Span {
                                                file: FileId(
                                                    0,
                                                ),
                                                start: 19,
                                                end: 25,
                                            },
                                        },
                                        args: [],
                                    },
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 19,
                                        end: 25,
                                    },
                                },
                                TypeAnnotation {
                                    kind: Name {
                                        name: Ident {
                                            name: "null",
                                            span: Span {
                                                file: FileId(
                                                    0,
                                                ),
                                                start: 28,
                                                end: 32,
                                            },
                                        },
                                        args: [],
                                    },
                                    span: Span {
                                        file: FileId(
                                            0,
                                        ),
                                        start: 28,
                                        end: 32,
                                    },
                                },
                            ],
                        ),
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 8,
                            end: 32,
                        },
                    },
                ),
                value: ExprId(
                    0,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 40,
            },
        },
    ],
    top_level: [
        StmtId(
            0,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    for_of_pattern_bindings: {},
    exported_decls: [],
}
